[metadata]
name = stacs-integration
classifiers = 
    Programming Language :: Python :: 3.9
    Natural Language :: English

[flake8]
max-line-length = 88

[options]
python_requires = >= 3.9

[options.entry_points]
console_scripts =
    stacs-integration-github-pr = stacs.integration.github.pull_request:main
